--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">QRDecoder</string>
+    <string name="app_name">HCCQR Decoder</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="file_picker">Choose file</string>
     <string name="decoded_label">Decoded Text:</string>
     <string name="file_chooser_label">Select a image to decode</string>
     <string name="activity_not_found">Please install a File Manager</string>
+    <string name="action_choose_file">Choose file</string>
+    <string name="action_photo">Take picture</string>
 
 </resources>
